# sabbir-hossain.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  app.html  index.html
New folder/: README.md
New folder/css/: header.css  main.css
css/: base.css  grid.css  header.css  main.css  style.css
js/: animate.js  audio.js  char-data.js  draw-text.js  lib.js  merge-char copy.js  merge-char.js  scene1.js  scene3.js  style.js  text.js
pkg/: package.json  sabbir_hossain.d.ts  sabbir_hossain.js  sabbir_hossain_bg.wasm  sabbir_hossain_bg.wasm.d.ts
src/: lib.rs  main.rs  option.rs  shader.wgsl
src/components/: box_area.rs  box_shape.rs  circle.rs  demo01.rs  ellipse.rs  mod.rs  picture.rs  semi_circle.rs  sine_curve_filled.rs  triad.rs  wheel.rs
src/scene/: mod.rs
src/scene/scene0/: constant.rs  index.rs  mod.rs
src/text/: a_capital.rs  b_capital.rs  c_capital.rs  comma.rs  d_capital.rs  divide.rs  dot.rs  e_capital.rs  eight.rs  equal.rs  f_capital.rs  first_bracket_left.rs  first_bracket_right.rs  five.rs  four.rs  g_capital.rs  h_capital.rs  i_capital.rs  index.rs  j_capital.rs  k_capital.rs  l_capital.rs  m_capital.rs  minus.rs  mod.rs  multiply.rs  n_capital.rs  nine.rs  o_capital.rs  one.rs  p_capital.rs  plus.rs  q_capital.rs  r_capital.rs  s_capital.rs  seven.rs  single_quote.rs  six.rs  t_capital.rs  three.rs  (+7 more)
src/utils/: camera.rs  color.rs  constant.rs  draw.rs  helper.rs  keyboard.rs  mod.rs  sound.rs  texture.rs  vertex.rs
