[package]
name = "sabbir_hossain"
version = "0.1.0"
edition = "2024"
description = "personal website of Mohd Sabbir Hossain"
authors = ["Mohd Sabbir Hossain <sabbir.hossain.dev@gmail.com>"]
repository = "git@github.com:sabbir-hossain/sabbir-hossain.github.io.git"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "25.0"
winit = { version = "0.30", features = ["rwh_05", "android-native-activity"] }
wasm-logger = "0.2.0"
wasm-bindgen-console-logger = "0.1.1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
js-sys = "0.3"
rodio = "0.17"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["spirv", "webgl"]}
getrandom = { version = "0.2", features = ["js"] }
# getrandom = { version = "0.3", features = ["wasm_js"] }
rodio = { version = "0.17", default-features = false, features = [
    "wasm-bindgen", 
    "wav"
] }
wasm-bindgen-futures = "0.4.20"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "Performance"
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
naga = { version = "0.9", features = ["glsl-in", "spv-out", "wgsl-out"]}

[[bin]]
name = "sabbir_hossain_desktop"
path = "src/main.rs"

